ags (4.3.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor bug-fixes
	* added ags_functional_spectrometer_test.c
	* added ags_functional_equalizer10_test.c
	* added ags_functional_fm_synth_test.c
	* added ags_functional_syncsynth_test.c
	* added ags_functional_fm_syncsynth_test.c
	* added ags_functional_hybrid_fm_synth_test.c
	* added ags_functional_sf2_synth_test.c
	* added ags_functional_pitch_sampler_test.c
	* added ags_functional_sfz_synth_test.c

ags (4.3.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reverted missing pulseaudio server
	* refactored ags_functional_notation_editor_workflow_test.c
	* refactored ags_functional_automation_editor_workflow_test.c
	* refactored ags_functional_panel_test.c
	* refactored ags_functional_mixer_test.c
	* refactored ags_functional_drum_test.c
	* refactored ags_functional_matrix_test.c
	* refactored ags_functional_synth_test.c
	* refactored ags_functional_hybrid_synth_test.c
	* refactored ags_functional_ffplayer_test.c
	* refactored ags_functional_notation_edit_test.c

ags (4.2.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_effect_line_remove_plugin()
	* improved functional-system-tests.mk.am
	* refactored ags_functional_line_member_add_and_destroy_test.c

ags (4.2.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_audio_start() don't initialize recall twice
	* improved ags_channel_start() don't initialize recall twice

ags (4.2.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed hide machine
	* fixed machine selector restore from XML
	* functional UI tests work again!
	* refactored ags_functional_machine_add_and_destroy_test.c
	* refactored ags_functional_machine_link_test.c

ags (4.2.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential SIGSEGV with AgsEffectPad
	* fixed missing pitch selection of AgsFFPlayer
	* started to refactor functional tests

ags (4.2.10)
