@@ -1,4 +1,4 @@
-c?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Copyright 2005-2022 Joël Krähemann <jkraehemann@gmail.com> -->
 <!-- Copying and distribution of this file, with or without modification, -->
